# DocScanAI

./: .replit  ai_processor.py  app.py  database.py  gst_classifier.py  ocr_processor.py  pyproject.toml  replit.nix  report_generator.py  trend_analyzer.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--Checkpoint-1-Setup-Backend-Supabase-File-Upload-OCR-Pipeline-Goal-Prepare-the-base-for-dat-1743862604459.txt
data/: hsn_codes.csv  taxlyzer.db
static/css/: chatbot.css  styles.css
static/js/: chatbot.js  main.js
templates/: index.html
